deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clipboard
spec:
  type: ClusterIP
  ports:
    - port: 4173
      targetPort: 4173
  selector:
    app: clipboard
