deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clipboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - clipboard.samarchyan.me
      secretName: clipboard-tls
  rules:
    - host: clipboard.samarchyan.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: clipboard
                port:
                  number: 4173
